objects/CS_ComplaintRequestCloneFields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>October 2015 release, Complaint request fields mapping for custom clone</description>
    <fields>
        <fullName>CRFieldApiName__c</fullName>
        <label>CR Field Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRFieldId__c</fullName>
        <label>CR Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRFieldLabel__c</fullName>
        <label>CR Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataType__c</fullName>
        <label>Data Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CS_ComplaintRequestCloneFields</label>
</CustomObject>